Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
       border-radius: 10px;
       font-size: 18px;
     }
+<meta name="monetag" content="05d2a8a90905b74c294e859d2102a2d5">
   </style>
 </head>
 <body>
