Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
+<?php include_once (dirname(__FILE__) . '/pa_antiadblock_10044932.php'); ?>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Plantar Árboles 🌱</title>
