--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
+<meta name="google-site-verification" content="RU1Tu9nH2wf162VhrQ7WbERIUUOUOmYTxxly7tciTDQ" />
 <?php include_once (dirname(__FILE__) . '/pa_antiadblock_10045032.php'); ?>
 <script>(function(s){s.dataset.zone='10044931',s.src='https://al5sm.com/tag.min.js'})([document.documentElement, document.body].filter(Boolean).pop().appendChild(document.createElement('script')))</script>
 <script>(function(s){s.dataset.zone='10045023',s.src='https://groleegni.net/vignette.min.js'})([document.documentElement, document.body].filter(Boolean).pop().appendChild(document.createElement('script')))</script>
