Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -1,46 +1,26 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-<meta name="google-site-verification" content="RU1Tu9nH2wf162VhrQ7WbERIUUOUOmYTxxly7tciTDQ" />
-<?php include_once (dirname(__FILE__) . '/pa_antiadblock_10045032.php'); ?>
-<script>(function(s){s.dataset.zone='10044931',s.src='https://al5sm.com/tag.min.js'})([document.documentElement, document.body].filter(Boolean).pop().appendChild(document.createElement('script')))</script>
-<script>(function(s){s.dataset.zone='10045023',s.src='https://groleegni.net/vignette.min.js'})([document.documentElement, document.body].filter(Boolean).pop().appendChild(document.createElement('script')))</script>
-<?php include_once (dirname(__FILE__) . '/pa_antiadblock_10044932.php'); ?>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="google-site-verification" content="RU1Tu9nH2wf162VhrQ7WbERIUUUO0mYTxxly7tciTDQ" />
+  <meta name="ppck-ver" content="f3ba5fd3657768848590680f5ca3cdb0" />
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="monetag" content="05d2a8a90905b74c294e859d2102a2d5" />
   <title>Plantar Árboles 🌱</title>
-<meta name="monetag" content="05d2a8a90905b74c294e859d2102a2d5">
   <style>
     body {
       background: #e8f5e9;
       font-family: Arial, sans-serif;
       text-align: center;
-      padding: 50px;
+      margin: 0;
+      padding: 0;
     }
-    button {
-      background: #4caf50;
-      color: white;
-      border: none;
-      padding: 15px 25px;
-      border-radius: 10px;
-      font-size: 18px;
-    }
+    h1 { color: #2e7d32; margin-top: 50px; }
+    p { color: #4caf50; font-size: 18px; }
   </style>
-<meta name="ppck-ver" content="f3ba5fd3657768848590680f5ca3cdb0" />
 </head>
-<meta name="google-site-verification" content="RU1Tu9nH2wf162VhrQ7WbERIUUOUOmYTxxly7tciTDQ" />
 <body>
-  <h1>🌳 Plantar Árboles</h1>
-  <p>Presiona el botón para plantar un árbol virtual.</p>
-  <button onclick="plantar()">Plantar 🌱</button>
-  <p id="contador">Árboles plantados: 0</p>
-
-  <script>
-    let arboles = 0;
-    function plantar() {
-      arboles++;
-      document.getElementById('contador').innerText = `Árboles plantados: ${arboles}`;
-    }
-  </script>
+  <h1>Plantar Árboles 🌱</h1>
+  <p>Ayudemos al planeta sembrando vida verde.</p>
 </body>
 </html>
